--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,12 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+    // Compose : Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
+    // Hilt + Compose Navigation
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 }
 
 kapt {
