--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,13 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // Hilt + Compose Navigation
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    // Icons compiled
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
+
+    // Compose : System colors
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
 }
 
 kapt {
