--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
 
     // Compose : System colors
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
+
+    // Data Store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 
 kapt {
