--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,11 @@ dependencies {
 
     // Data Store
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.5.0"
+    implementation "androidx.room:room-ktx:2.5.0"
+    kapt "androidx.room:room-compiler:2.5.0"
 }
 
 kapt {
