--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,13 +54,15 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:1.5.0-alpha04"
-    implementation 'androidx.compose.material:material:1.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.3"
     debugImplementation "androidx.compose.ui:ui-tooling:1.4.3"
     debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.3"
+
+    // M3
+    implementation "androidx.compose.material3:material3:1.1.0"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
