App icon + Splash screen background

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,9 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
+
+    // Splash screen
+    implementation "androidx.core:core-splashscreen:1.0.1"
 }
 
 kapt {
